--- a/Meilenstein01/Makefile
+++ b/Meilenstein01/Makefile
@@ -1,10 +1,13 @@
+all: Pflichtenheft.pdf
+	$(info ARTIFACTS:Pflichtenheft.pdf)
+
 Pflichtenheft.pdf: Pflichtenheft.tex
 	latexmk -pdf Pflichtenheft.tex
 
 .PHONY: clean
 clean:
-	latexmk -C
+	latexmk -pdf -C
 
 .PHONY: deploy
 deploy: Pflichtenheft.pdf
-	latexmk -c
+	latexmk -pdf -c
