fix #5, mark main pdf target as phony (should be ok, as it only calls latexmk)

--- a/Meilenstein01/Makefile
+++ b/Meilenstein01/Makefile
@@ -1,6 +1,7 @@
 all: Pflichtenheft.pdf
 	$(info ARTIFACTS:Pflichtenheft.pdf)
 
+.PHONY: Pflichtenheft.pdf
 Pflichtenheft.pdf: Pflichtenheft.tex
 	latexmk -pdf Pflichtenheft.tex
 
