--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -4,10 +4,10 @@ on:
     branches:
       - master
 jobs:
-  latex:
+  combine:
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Git repository
+    - name: Combine repos
       uses: SoPra-Team-17/repomerge-action@master
       with:
         org: "SoPra-Team-17"
