domain model for gadgets

--- a/Meilenstein01/Makefile
+++ b/Meilenstein01/Makefile
@@ -2,7 +2,7 @@ all: Pflichtenheft.pdf
 	$(info ARTIFACTS:Pflichtenheft.pdf)
 
 .PHONY: Pflichtenheft.pdf
-Pflichtenheft.pdf: Pflichtenheft.tex domainmodel.pdf fields.pdf
+Pflichtenheft.pdf: Pflichtenheft.tex domainmodel.pdf fields.pdf gadgets.pdf
 	latexmk -pdf Pflichtenheft.tex
 
 domainmodel.pdf: diagrams/domainmodel.dot
@@ -11,9 +11,13 @@ domainmodel.pdf: diagrams/domainmodel.dot
 fields.pdf: diagrams/fields.dot
 	dot -T pdf -o $@ diagrams/fields.dot
 
+gadgets.pdf: diagrams/gadgets.dot
+	unflatten -l 5 -o compressed.dot diagrams/gadgets.dot
+	dot -T pdf -o $@ compressed.dot 
+
 .PHONY: clean
 clean:
-	latexmk -pdf -C
+	latexmk -pdf -C 
 
 .PHONY: deploy
 deploy: Pflichtenheft.pdf
