--- a/.github/workflows/combine.yml
+++ b/.github/workflows/combine.yml
@@ -7,6 +7,8 @@ jobs:
   combine:
     runs-on: ubuntu-latest
     steps:
+    - name: Set up Git repository
+      uses: actions/checkout@v1
     - name: Push to GitLab
       uses: SoPra-Team-17/repomerge-action@master
       with:
